--- a/service/pom.xml
+++ b/service/pom.xml
@@ -14,9 +14,12 @@
         <module>core</module>
     </modules>
 
+    <name>MWS :: Service</name>
+
     <properties>
         <spring.version>4.3.10.RELEASE</spring.version>
         <spring.boot.version>1.5.6.RELEASE</spring.boot.version>
+        <hibernate.version>5.2.10.Final</hibernate.version>
     </properties>
 
     <dependencyManagement>
@@ -32,6 +35,17 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>${spring.boot.version}</version>
+            </dependency>
+            <!-- JPA -->
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>${hibernate.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-jpa</artifactId>
+
             </dependency>
         </dependencies>
     </dependencyManagement>
