--- a/service/pom.xml
+++ b/service/pom.xml
@@ -18,6 +18,7 @@
 
     <properties>
         <spring.version>4.3.10.RELEASE</spring.version>
+        <spring.data.version>2.0.3.RELEASE</spring.data.version>
         <spring.boot.version>1.5.6.RELEASE</spring.boot.version>
         <hibernate.version>5.2.10.Final</hibernate.version>
     </properties>
@@ -45,7 +46,7 @@
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-jpa</artifactId>
-
+                <version>${spring.data.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
